Sometimes a chunk of dmesg is not collected
<ickle> https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8080/fi-byt-clapper/igt@i915_selftest@live@execlists.html
<ickle> the splat is definitely from live@ring_submission
<ickle> but evidence of starting that test is gone
It has happened a couple of times now. It's not the end of a dmesg that goes missing, it's a chunk in the middle.